--- a/html/index.html
+++ b/html/index.html
@@ -700,6 +700,15 @@
                 
         </div>
 
+        <div id="logo">
+
+            <h4 class="titulo_azul_menor">Trabalhe Conosco</h4>
+
+            <a target="_blank" href="../html/formulario.html">Envie seu Currículo</a>
+            <br>
+                
+        </div>
+
     </footer>
 
         <br><br>
