--- a/html/index.html
+++ b/html/index.html
@@ -38,7 +38,7 @@
     <!--Menu -->
 
     <nav id="menu">
-        <ul>
+        <ul class="nav">
             <br>
 
             <li><a href="#ir_empresa">Empresa</a></li>
