--- a/html/seminovos.html
+++ b/html/seminovos.html
@@ -28,7 +28,7 @@
 
                 <div>
                 
-                    <h3>SCANIA V8 R-500 6x4 HIGHLINE/2012</h3>
+                    <h3>SCANIA V8 R-500 6x4 HIGHLINE/2012.</h3>
                     
                 </div>   
 
