--- a/html/index.html
+++ b/html/index.html
@@ -580,21 +580,12 @@
 
     <br><br><br>
 
-    <section id="empresa">
+    <section>
 
-        <div>
-
-            <img src="../img/area_atuacao.png " alt="Imagem Area de Atuação" height="550px">
-
+        <div>    
+            <img src="../img/area.png " alt="Imagem Area de Atuação" width="100%" height="100%">
         </div>
 
-        <div>
-
-            <br><br><br><br><br><br><br><br><br><br><br><br>
-
-            <li>A TRANSPORTES BAGGETO vem fortemente atuando nas regiões, Sul, Sudeste, Norte, Nordeste e Centro Oeste do Brasil.</li>
-
-        </div>
         
     </section>
 
