--- a/html/carreta.html
+++ b/html/carreta.html
@@ -49,27 +49,27 @@
 
     <div class="mySlides">
       <div class="numbertext">1 / 5</div>
-      <img src="../img/seminovos/R-420/1.jpg" style="width:100%">
+      <img src="../img/seminovos/carreta/1.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
       <div class="numbertext">2 / 5</div>
-      <img src="../img/seminovos/R-420/2.jpg" style="width:100%">
+      <img src="../img/seminovos/carreta/2.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
       <div class="numbertext">3 / 5</div>
-      <img src="../img/seminovos/R-420/3.jpg" style="width:100%">
+      <img src="../img/seminovos/carreta/3.jpg" style="width:100%">
     </div>
     
     <div class="mySlides">
       <div class="numbertext">4 / 5</div>
-      <img src="../img/seminovos/R-420/4.jpg" style="width:100%">
+      <img src="../img/seminovos/carreta/4.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
       <div class="numbertext">5 / 5</div>
-      <img src="../img/seminovos/R-420/5.jpg" style="width:100%">
+      <img src="../img/seminovos/carreta/5.jpg" style="width:100%">
     </div>
     
     <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
