--- a/html/formulario.html
+++ b/html/formulario.html
@@ -66,7 +66,7 @@
               <label for="lname">CPF</label>
             </div>
             <div class="col-75">
-              <input type="text" id="lname" name="CPF" placeholder="Seu CPF..">
+              <input type="text" id="lname" name="cpf" placeholder="Seu CPF..">
             </div>
           </div>
 
@@ -262,7 +262,7 @@
               <label for="lname">Celular da Empresa</label>
             </div>
             <div class="col-75">
-              <input type="text" id="lname" name="empresa" placeholder="Celular da Empresa..">
+              <input type="text" id="lname" name="empresa2" placeholder="Celular da Empresa..">
             </div>
           </div>
 
@@ -271,7 +271,7 @@
               <label for="lname">Fixo da Empresa</label>
             </div>
             <div class="col-75">
-              <input type="text" id="lname" name="empresa" placeholder="Fixo da Empresa..">
+              <input type="text" id="lname" name="empresa3" placeholder="Fixo da Empresa..">
             </div>
           </div>
           <br><br>
@@ -282,7 +282,7 @@
               <label for="lname">Empresa que Trabalhou</label>
             </div>
             <div class="col-75">
-              <input type="text" id="lname" name="empresa" placeholder="Empresa que Trabalhou..">
+              <input type="text" id="lname" name="empresa4" placeholder="Empresa que Trabalhou..">
             </div>
           </div>
 
@@ -309,7 +309,7 @@
               <label for="lname">Celular da Empresa</label>
             </div>
             <div class="col-75">
-              <input type="text" id="lname" name="empresa" placeholder="Celular da Empresa..">
+              <input type="text" id="lname" name="empresa5" placeholder="Celular da Empresa..">
             </div>
           </div>
 
@@ -318,7 +318,7 @@
               <label for="lname">Fixo da Empresa</label>
             </div>
             <div class="col-75">
-              <input type="text" id="lname" name="empresa" placeholder="Fixo da Empresa..">
+              <input type="text" id="lname" name="empresa6" placeholder="Fixo da Empresa..">
             </div>
           </div>
 
@@ -329,7 +329,7 @@
               <label for="lname">Nome</label>
             </div>
             <div class="col-75">
-              <input type="text" id="lname" name="empresa" placeholder="Nome da Pessoa..">
+              <input type="text" id="lname" name="empresa7" placeholder="Nome da Pessoa..">
             </div>
           </div>
 
@@ -338,7 +338,7 @@
               <label for="lname">Telefone</label>
             </div>
             <div class="col-75">
-              <input type="text" id="lname" name="empresa" placeholder="Seu Telefone..">
+              <input type="text" id="lname" name="empresa8" placeholder="Seu Telefone..">
             </div>
           </div>
           <br><br>
@@ -348,7 +348,7 @@
               <label for="lname">Nome</label>
             </div>
             <div class="col-75">
-              <input type="text" id="lname" name="empresa" placeholder="Nome da Pessoa..">
+              <input type="text" id="lname" name="empresa9" placeholder="Nome da Pessoa..">
             </div>
           </div>
 
@@ -357,7 +357,7 @@
               <label for="lname">Telefone</label>
             </div>
             <div class="col-75">
-              <input type="text" id="lname" name="empresa" placeholder="Seu Telefone..">
+              <input type="text" id="lname" name="empresa10" placeholder="Seu Telefone..">
             </div>
           </div>
 
