--- a/html/formulario.html
+++ b/html/formulario.html
@@ -45,10 +45,10 @@
 
           <div class="row">
             <div class="col-25">
-              <label for="lname">Data Nascimento</label>
+              <label for="dataNasc">Data Nascimento</label>
             </div>
             <div class="col-75">
-              <input type="date" id="lname" name="data-nascimento">
+              <input type="date" id="dataNasc" name="data-nascimento">
             </div>
           </div>
 
@@ -184,28 +184,28 @@
 
           <div class="row">
             <div class="col-25">
-              <label for="lname">Data Vencimento</label>
+              <label for="dataVenc">Data Vencimento</label>
             </div>
             <div class="col-75">
-              <input type="date" id="lname" name="vencimento">
+              <input type="date" id="dataVenc" name="vencimento">
             </div>
           </div>
 
           <div class="row">
             <div class="col-25">
-              <label for="lname">Data Emissão</label>
+              <label for="dataEmi">Data Emissão</label>
             </div>
             <div class="col-75">
-              <input type="date" id="lname" name="data-emissao">
+              <input type="date" id="dataEmi" name="data-emissao">
             </div>
           </div>
 
           <div class="row">
             <div class="col-25">
-              <label for="lname">Data da primeira Habilitação</label>
+              <label for="dataPri">Data da primeira Habilitação</label>
             </div>
             <div class="col-75">
-              <input type="date" id="lname" name="data-primeira">
+              <input type="date" id="dataPri" name="data-primeira">
             </div>
           </div>
 
