--- a/html/formulario.html
+++ b/html/formulario.html
@@ -154,27 +154,6 @@
 
           <div class="row">
             <div class="col-25">
-              <label for="country">Função</label>
-            </div>
-            <div class="col-75">
-              <select id="country" name="country">
-
-                <option value="Motorista">Motorista</option>
-                  <option value="Mecanico">Mecânico</option>
-                  <option value="Almoxarifado">Almoxarifado</option>
-                  <option value="Rastreador">Rastreador</option>
-                  <option value="Escritorio">Escritório</option>
-                  <option value="Lavacao">Lavação</option>
-                  <option value="Pintor">Pintor</option>
-                  <option value="Soldador">Soldador</option>
-                  <option value="A combinar">A Combinar...</option>
-                  
-              </select>
-            </div>
-          </div>
-
-          <div class="row">
-            <div class="col-25">
               <label for="lname">Número Carteira de Habilitação</label>
             </div>
             <div class="col-75">
@@ -366,7 +345,7 @@
               <label for="subject">Informações Adicionais</label>
             </div>
             <div class="col-75">
-              <textarea id="subject" name="subject" placeholder="Deixe neste campo alguma informação que você gostaria e que não esta nos campos acima. (Opcional)." style="height:200px"></textarea>
+              <textarea id="subject" name="subject" placeholder="Deixe neste campo o Cargo pretendido e Pretensão Salarial.." style="height:200px"></textarea>
             </div>
           </div>
           <br>
