--- a/html/index.html
+++ b/html/index.html
@@ -645,12 +645,14 @@
     <!--Rodape-->
 
     <section class="div_background">
-    <br>
+    <br><br>
     <footer id="empresa">
         
         <div id="logo">
 
             <h4 class="titulo_azul_menor">Redes Sociais</h4>
+
+            <section>
 
             <a href="https://www.facebook.com/Transportes-Baggeto-599644193882132/?view_public_for=599644193882132" target="_blank">
                 <img src="../img/redes-sociais/face2.png" onMouseOver="this.src='../img/redes-sociais/face2.png';" onMouseOut="this.src='../img/redes-sociais/face2.png';"/></a>
@@ -661,6 +663,8 @@
                     <a href="https://www.linkedin.com/uas/login?session_redirect=https%3A%2F%2Fwww.linkedin.com%2Fcompany%2Ftransportes-baggeto%2Fabout" target="_blank">
                         <img src="../img/redes-sociais/linkedin.png" onMouseOver="this.src='../img/redes-sociais/linkedin.png';" onMouseOut="this.src='../img/redes-sociais/linkedin.png';"/></a>           
             
+            </section>
+
         </div>
 
         <div></div>
@@ -693,7 +697,9 @@
     </section>
 
     <div class="div_background">
-    <br><br>  
+
+    <br><br><br><br>
+
     </div>
 
         <div class="div_background">
