--- a/html/formulario.html
+++ b/html/formulario.html
@@ -10,6 +10,7 @@
         <link href="../css/formulario.css" rel="stylesheet">
         <script type="text/javascript" src="../js/mascara.js"></script>
         <script type="text/javascript" src="../js/validar.js"></script>
+        <script type="text/javascript" src="../node-js/app.js"></script>
 
         <title>Trabalhe Conosco</title>
 
@@ -349,8 +350,9 @@
             </div>
           </div>
           <br>
+
           <div class="row">
-            <input type="submit" value="Enviar Currículo" onclick="return validar()"></center>
+            <input type="submit" value="Enviar Currículo" onclick="return validar()">
           </div>
             
           </section>
