--- a/html/login.html
+++ b/html/login.html
@@ -15,8 +15,7 @@
         <script>
             function handle(e){
                 if(e.keyCode === 13){
-                    e.preventDefault(); // Ensure it is only this code that runs
-        
+                    e.preventDefault(); // Ensure it is only this code that runs    
                     validarSenha()
                 }
             }
@@ -29,7 +28,8 @@
 senha1 = document.f1.senha1.value
 
 if (senha1 == "baggeto1020"){
-    window.location.href = "https://derivancarbonicoan.github.io/site/html/eventos.html";
+    //window.location.href = "https://derivancarbonicoan.github.io/site/html/eventos.html";
+    window.location.href = "../html/eventos.html";
 }
  
 else
