--- a/html/seminovos.html
+++ b/html/seminovos.html
@@ -68,7 +68,7 @@
             
             <div class="galeria">
                 <br><br><br><br><br>
-                <a href="../html/seminovos-carreta-2012.html"> <img src="../img/seminovos/CARRETA LIBRELATO 2012/WhatsApp-Image-2020-12-15-at-16.28-site3.jpg" alt=" " style="width: 300px ;height: 300px; " /></a>
+                <a href="../html/seminovos-carreta-2012.html"> <img src="../img/seminovos/CARRETA LIBRELATO 2012/3.jpg" alt=" " style="width: 300px ;height: 300px; " /></a>
 
                 <div>
 
