--- a/html/seminovos-carreta-2012.html
+++ b/html/seminovos-carreta-2012.html
@@ -23,24 +23,24 @@
   <section id="empresa">
 
   <div class="column">
-    <img src="../img/seminovos/CARRETA LIBRELATO 2012/WhatsApp-Image-2020-12-15-at-16.28-site.jpg" width="150px" height="150px" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+    <img src="../img/seminovos/CARRETA LIBRELATO 2012/2.jpg" width="150px" height="150px" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
   </div>
   <div class="column">
-    <img src="../img/seminovos/CARRETA LIBRELATO 2012/WhatsApp-Image-2020-12-15-at-16.28-site2.jpg" width="150px" height="150px" onclick="openModal();currentSlide(2)" class="hover-shadow cursor">
+    <img src="../img/seminovos/CARRETA LIBRELATO 2012/3.jpg" width="150px" height="150px" onclick="openModal();currentSlide(2)" class="hover-shadow cursor">
   </div>
   <div class="column">
-    <img src="../img/seminovos/CARRETA LIBRELATO 2012/WhatsApp-Image-2020-12-15-at-16.28-site3.jpg" width="150px" height="150px" onclick="openModal();currentSlide(3)" class="hover-shadow cursor">
+    <img src="../img/seminovos/CARRETA LIBRELATO 2012/4.jpg" width="150px" height="150px" onclick="openModal();currentSlide(3)" class="hover-shadow cursor">
   </div>
   <div class="column">
-    <img src="../img/seminovos/CARRETA LIBRELATO 2012/WhatsApp-Image-2020-12-15-at-16.28-site4.jpg" width="150px" height="150px" onclick="openModal();currentSlide(4)" class="hover-shadow cursor">
-  </div>
-
-  <div class="column">
-    <img src="../img/seminovos/CARRETA LIBRELATO 2012/WhatsApp-Image-2020-12-15-at-16.28-site5.jpg" width="150px" height="150px" onclick="openModal();currentSlide(5)" class="hover-shadow cursor">
+    <img src="../img/seminovos/CARRETA LIBRELATO 2012/5.jpg" width="150px" height="150px" onclick="openModal();currentSlide(4)" class="hover-shadow cursor">
   </div>
 
   <div class="column">
-    <img src="../img/seminovos/CARRETA LIBRELATO 2012/WhatsApp Image 2021-05-31 at 11.43.19.jpeg" width="150px" height="150px" onclick="openModal();currentSlide(6)" class="hover-shadow cursor">
+    <img src="../img/seminovos/CARRETA LIBRELATO 2012/6.jpg" width="150px" height="150px" onclick="openModal();currentSlide(5)" class="hover-shadow cursor">
+  </div>
+
+  <div class="column">
+    <img src="../img/seminovos/CARRETA LIBRELATO 2012/1.jpeg" width="150px" height="150px" onclick="openModal();currentSlide(6)" class="hover-shadow cursor">
   </div>
 
   
@@ -53,32 +53,32 @@
 
     <div class="mySlides">
       <div class="numbertext">1 / 6</div>
-      <img src="../img/seminovos/CARRETA LIBRELATO 2012/WhatsApp-Image-2020-12-15-at-16.28-site.jpg" style="width:100%">
+      <img src="../img/seminovos/CARRETA LIBRELATO 2012/2.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
       <div class="numbertext">2 / 6</div>
-      <img src="../img/seminovos/CARRETA LIBRELATO 2012/WhatsApp-Image-2020-12-15-at-16.28-site2.jpg" style="width:100%">
+      <img src="../img/seminovos/CARRETA LIBRELATO 2012/3.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
       <div class="numbertext">3 / 6</div>
-      <img src="../img/seminovos/CARRETA LIBRELATO 2012/WhatsApp-Image-2020-12-15-at-16.28-site3.jpg" style="width:100%">
+      <img src="../img/seminovos/CARRETA LIBRELATO 2012/4.jpg" style="width:100%">
     </div>
     
     <div class="mySlides">
       <div class="numbertext">4 / 6</div>
-      <img src="../img/seminovos/CARRETA LIBRELATO 2012/WhatsApp-Image-2020-12-15-at-16.28-site4.jpg" style="width:100%">
+      <img src="../img/seminovos/CARRETA LIBRELATO 2012/5.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
       <div class="numbertext">5 / 6</div>
-      <img src="../img/seminovos/CARRETA LIBRELATO 2012/WhatsApp-Image-2020-12-15-at-16.28-site5.jpg" style="width:100%">
+      <img src="../img/seminovos/CARRETA LIBRELATO 2012/6.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
       <div class="numbertext">6 / 6</div>
-      <img src="../img/seminovos/CARRETA LIBRELATO 2012/WhatsApp Image 2021-05-31 at 11.43.19.jpeg" style="width:100%">
+      <img src="../img/seminovos/CARRETA LIBRELATO 2012/1.jpeg" style="width:100%">
     </div>
     
     <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
