--- a/html/seminovos-carreta-2013.html
+++ b/html/seminovos-carreta-2013.html
@@ -23,32 +23,32 @@
   <section id="empresa">
 
   <div class="column">
-    <img src="../img/seminovos/CARRETA LIBRELATO 2013/1.jpg" width="150px" height="150px" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
+    <img src="../img/seminovos/Carreta Librelato 2013/1.jpg" width="150px" height="150px" onclick="openModal();currentSlide(1)" class="hover-shadow cursor">
   </div>
   <div class="column">
-    <img src="../img/seminovos/CARRETA LIBRELATO 2013/2.jpg" width="150px" height="150px" onclick="openModal();currentSlide(2)" class="hover-shadow cursor">
+    <img src="../img/seminovos/Carreta Librelato 2013/2.jpg" width="150px" height="150px" onclick="openModal();currentSlide(2)" class="hover-shadow cursor">
   </div>
   <div class="column">
-    <img src="../img/seminovos/CARRETA LIBRELATO 2013/3.jpg" width="150px" height="150px" onclick="openModal();currentSlide(3)" class="hover-shadow cursor">
+    <img src="../img/seminovos/Carreta Librelato 2013/3.jpg" width="150px" height="150px" onclick="openModal();currentSlide(3)" class="hover-shadow cursor">
   </div>
   <div class="column">
-    <img src="../img/seminovos/CARRETA LIBRELATO 2013/4.jpg" width="150px" height="150px" onclick="openModal();currentSlide(4)" class="hover-shadow cursor">
-  </div>
-
-  <div class="column">
-    <img src="../img/seminovos/CARRETA LIBRELATO 2013/5.jpg" width="150px" height="150px" onclick="openModal();currentSlide(5)" class="hover-shadow cursor">
+    <img src="../img/seminovos/Carreta Librelato 2013/4.jpg" width="150px" height="150px" onclick="openModal();currentSlide(4)" class="hover-shadow cursor">
   </div>
 
   <div class="column">
-    <img src="../img/seminovos/CARRETA LIBRELATO 2013/6.jpg" width="150px" height="150px" onclick="openModal();currentSlide(6)" class="hover-shadow cursor">
+    <img src="../img/seminovos/Carreta Librelato 2013/5.jpg" width="150px" height="150px" onclick="openModal();currentSlide(5)" class="hover-shadow cursor">
   </div>
 
   <div class="column">
-    <img src="../img/seminovos/CARRETA LIBRELATO 2013/7.jpg" width="150px" height="150px" onclick="openModal();currentSlide(7)" class="hover-shadow cursor">
+    <img src="../img/seminovos/Carreta Librelato 2013/6.jpg" width="150px" height="150px" onclick="openModal();currentSlide(6)" class="hover-shadow cursor">
   </div>
 
   <div class="column">
-    <img src="../img/seminovos/CARRETA LIBRELATO 2013/8.jpg" width="150px" height="150px" onclick="openModal();currentSlide(8)" class="hover-shadow cursor">
+    <img src="../img/seminovos/Carreta Librelato 2013/7.jpg" width="150px" height="150px" onclick="openModal();currentSlide(7)" class="hover-shadow cursor">
+  </div>
+
+  <div class="column">
+    <img src="../img/seminovos/Carreta Librelato 2013/8.jpg" width="150px" height="150px" onclick="openModal();currentSlide(8)" class="hover-shadow cursor">
   </div>
   
 </section>
@@ -60,42 +60,42 @@
 
     <div class="mySlides">
       <div class="numbertext">1 / 8</div>
-      <img src="../img/seminovos/CARRETA LIBRELATO 2013/1.jpg" style="width:100%">
+      <img src="../img/seminovos/Carreta Librelato 2013/1.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
       <div class="numbertext">2 / 8</div>
-      <img src="../img/seminovos/CARRETA LIBRELATO 2013/2.jpg" style="width:100%">
+      <img src="../img/seminovos/Carreta Librelato 2013/2.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
       <div class="numbertext">3 / 8</div>
-      <img src="../img/seminovos/CARRETA LIBRELATO 2013/3.jpg" style="width:100%">
+      <img src="../img/seminovos/Carreta Librelato 2013/3.jpg" style="width:100%">
     </div>
     
     <div class="mySlides">
       <div class="numbertext">4 / 8</div>
-      <img src="../img/seminovos/CARRETA LIBRELATO 2013/4.jpg" style="width:100%">
+      <img src="../img/seminovos/Carreta Librelato 2013/4.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
       <div class="numbertext">5 / 8</div>
-      <img src="../img/seminovos/CARRETA LIBRELATO 2013/5.jpg" style="width:100%">
+      <img src="../img/seminovos/Carreta Librelato 2013/5.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
       <div class="numbertext">6 / 8</div>
-      <img src="../img/seminovos/CARRETA LIBRELATO 2013/6.jpg" style="width:100%">
+      <img src="../img/seminovos/Carreta Librelato 2013/6.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
       <div class="numbertext">7 / 8</div>
-      <img src="../img/seminovos/CARRETA LIBRELATO 2013/7.jpg" style="width:100%">
+      <img src="../img/seminovos/Carreta Librelato 2013/7.jpg" style="width:100%">
     </div>
 
     <div class="mySlides">
       <div class="numbertext">8 / 8</div>
-      <img src="../img/seminovos/CARRETA LIBRELATO 2013/8.jpg" style="width:100%">
+      <img src="../img/seminovos/Carreta Librelato 2013/8.jpg" style="width:100%">
     </div>
     
     <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
