--- a/html/seminovos.html
+++ b/html/seminovos.html
@@ -90,7 +90,7 @@
             <div class="galeria">
                 
                 <br><br><br><br><br>
-                <a href="../html/seminovos-carreta-2013.html"> <img src="../img/seminovos/CARRETA LIBRELATO 2013/1.jpg" alt=" " style="width: 300px ;height: 300px; " /></a>
+                <a href="../html/seminovos-carreta-2013.html"> <img src="../img/seminovos/Carreta Librelato 2013/1.jpg" alt=" " style="width: 300px ;height: 300px; " /></a>
 
                 <div>
 
