--- a/html/seminovos.html
+++ b/html/seminovos.html
@@ -46,7 +46,7 @@
                     
             <div class="galeria">
                 
-                <a href="../html/seminovos-V8.html"> <img src="../img/seminovos/v8/1.jpg" alt=" " style="width: 300px ;height: 300px; " /></a>
+                <a href="../html/seminovos-v8.html"> <img src="../img/seminovos/v8/1.jpg" alt=" " style="width: 300px ;height: 300px; " /></a>
 
                 <div>
 
