--- a/html/index.html
+++ b/html/index.html
@@ -25,7 +25,7 @@
         <section id="logo">
 
             <form method="get" target="_blank" action="../html/seminovos.html">
-            <button class="botao" type="submit">SemiNovos</button></form>
+            <button class="botao" type="submit">Seminovos</button></form>
 
             <img src="../img/baggeto.png " alt="" style="width: 150 ;height: 150px; " />
             
