--- a/html/seminovos.html
+++ b/html/seminovos.html
@@ -44,7 +44,7 @@
 
                 <div>
                 
-                    <h3>SCANIA R-420 6X4 HIGHLINE/2011</h3>
+                    <h4 class="titulo_azul_menor">SCANIA R-420 6X4 HIGHLINE/2011</h4>
                     
                     <p>Cavalo Mecânico<br>Veículo de Procedência<br>
                         Único Dono<br>100% Revisado<br>
@@ -76,7 +76,7 @@
 
                 <div>
 
-                    <h3>SCANIA V8 R-500 6X4 HIGHLINE/2012</h3>
+                    <h4 class="titulo_azul_menor">SCANIA V8 R-500 6X4 HIGHLINE/2012</h4>
 
                     <p>Cavalo Mecânico<br>Veículo de Procedência<br>
                         Único Dono<br>100% Revisado<br>
@@ -98,7 +98,7 @@
 
                 <div>
 
-                    <h3>CARRETA LIBRELATO/2012</h3>
+                    <h4 class="titulo_azul_menor">CARRETA LIBRELATO/2012</h4>
 
                     <p>Bitrenzão Librelato<br>Veículo de Procedência<br>
                         Único Dono<br>100% Revisado e Reformado<br>
@@ -120,7 +120,7 @@
 
                 <div>
 
-                    <h3>CARRETA LIBRELATO/2013</h3>
+                    <h4 class="titulo_azul_menor">CARRETA LIBRELATO/2013</h4>
 
                     <p>Bitrenzão Librelato<br>Veículo de Procedência<br>
                         Único Dono<br>100% Revisado e Reformado<br>
