--- a/html/formulario.html
+++ b/html/formulario.html
@@ -213,6 +213,10 @@
 
               <input type="checkbox" id="horns" name="horns">
               <label for="horns">D</label>
+
+              <input type="checkbox" id="horns" name="horns">
+              <label for="horns">E</label>
+
             </div>
           </div>
           <br><br>
