--- a/html/index.html
+++ b/html/index.html
@@ -146,7 +146,7 @@
         <!--Imagem4 Empresa-->
         <div>
 
-            <img src="../img/empresa/empresa4.jpg " alt=" " style="width: 307px ;height: 208px; " />
+            <img src="../img/empresa/empresa.jpg" alt=" " style="width: 307px ;height: 208px; " />
 
         </div>
 
