--- a/html/vendidos3.html
+++ b/html/vendidos3.html
@@ -32,7 +32,7 @@
 
     <div class="mySlides">
         <div class="numbertext">1 / 1</div>
-        <img src="../img/seminovos/vendidos/3.3.png" style="width:100%">
+        <img src="../img/seminovos/vendidos/3.3.jpg" style="width:100%">
       </div>
   
       
@@ -45,7 +45,7 @@
 
     <div class="mySlides">
       <div class="numbertext">1 / 1</div>
-      <img src="../img/seminovos/vendidos/3.png" style="width:100%">
+      <img src="../img/seminovos/vendidos/3.3.jpg" style="width:100%">
     </div>
 
     
