--- a/html/seminovos.html
+++ b/html/seminovos.html
@@ -25,6 +25,11 @@
     </head>
 
     <body>
+
+        <div class="whats">
+            <a href="https://wa.me/5548988480818" target="_blank">
+                <img src="../img/whatsapp.png" onMouseOver="this.src='../img/whatsapp.png';" onMouseOut="this.src='../img/whatsapp.png';"/></a>
+            </div>
         
         <br><br><br>
 
