--- a/html/index.html
+++ b/html/index.html
@@ -61,6 +61,9 @@
             <li>
                 <a target="_blank" href="../html/formulario.html">Trabalhe Conosco</a>
             </li>
+            <li>
+                <a target="_blank" href="../html/download.html">Apresentação</a>
+            </li>
 
         </ul>
     </nav>
@@ -696,7 +699,10 @@
             <br>
 
             <li><a href="../html/login.html" target="_blank">Eventos</a></li>
-            <!--<img src="../img/eventos.png" onMouseOver="this.src='../img/eventos-2.png';" onMouseOut="this.src='../img/eventos.png';"/></a>-->
+            <br>
+
+            <li><a href="../html/login2.html" target="_blank">Vídeo Aula</a></li>
+            
                 
         </div>
 
