--- a/html/login2.html
+++ b/html/login2.html
@@ -36,8 +36,8 @@
 senha1 = document.f1.senha1.value
 
 if (senha1 == "baggeto1020"){
-    //window.location.href = "https://derivancarbonicoan.github.io/site/html/eventos.html";
-    window.location.href = "../html/eventos.html";
+    
+    window.location.href = "../html/video_aula.html";
 }
  
 else
@@ -52,7 +52,7 @@ else
      .container {
 width: 100vw;
 height: 100vh;
-background-image: url("../img/eventos.png");
+background-image: url("../img/video_aula.png");
 background-repeat: no-repeat;
 background-size: 100%;
 display: flex;
