--- a/html/index.html
+++ b/html/index.html
@@ -701,7 +701,7 @@
             <li><a href="../html/login.html" target="_blank">Eventos</a></li>
             <br>
 
-            <li><a href="../html/login2.html" target="_blank">Vídeo Aula</a></li>
+            <li><a href="../html/login2.html" target="_blank">Wikis Baggeto</a></li>
             
                 
         </div>
