--- a/html/login2.html
+++ b/html/login2.html
@@ -37,7 +37,7 @@ senha1 = document.f1.senha1.value
 
 if (senha1 == "baggeto1020"){
     
-    window.location.href = "../html/video_aula.html";
+    window.location.href = "../html/wikis.html";
 }
  
 else
